--- a/frontend/src/styles/Message.css
+++ b/frontend/src/styles/Message.css
@@ -134,7 +134,7 @@
 
 @media only screen and (max-width: 600px) {
   .msg_layout {
-    padding: 20px 0 0;
+    padding: 20px 0;
   }
 }
 
